# lab5

./: .gitignore  CMakeLists.txt  Cargo.toml  client.rs  cluster.rs  errors.cpp  errors.hpp  lab.cpp  lab5.cpp  processor.cpp  server.rs  shared_memory.hpp  test.cpp  threads.hpp  threads.rs  type.hpp
